--- a/styles/architects.css
+++ b/styles/architects.css
@@ -49,6 +49,11 @@ main > section{
   margin-top: 130px;
 }
 
+.section-title{
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+
 /* header styles */
 
 /* navbar realted styles */
@@ -111,15 +116,60 @@ main > section{
 .our-feautres{
   margin-left: 130px;
   max-width: 530px;
+  
 }
 
-.feature-title{
-  font-size: 2.8rem;
-  font-weight: 700;
-}
 
 #quick-list{
   font-weight: 500;
+}
+
+/* some facts related styles */
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.fact-card{
+  border: 1px solid #FF900E;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.fact-number{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.fact-name{
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.fact-description{
+  max-width: 540px;
+}
+
+/* sponsor related style */
+.sponsor-info{
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+}
+.sponsor-companies{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img{
+  filter: grayscale(100%);
 }
 
 /* responsive media query */
@@ -131,15 +181,24 @@ main > section{
     flex-direction: column;
   }
 
-  .team-img-container{
-    grid-template-columns: repeat(1, 1fr);
+  .team-img-container, 
+  .facts-container, 
+  .sponsor-companies {
+    grid-template-columns: 1fr;
   }
 
+  .facts-container, 
+  .sponsor-companies{
+    justify-items: center;
+    gap: 24px;
+  }
+  
   .our-feautres{
     margin-left: 20px;
   }
 
 }
+
 
 /* medium device */
 @media screen and (min-width:576px) and (max-width:992px) {
@@ -148,5 +207,10 @@ main > section{
   }
   .our-feautres{
     margin-left: 50px auto;
+  }
+.sponsor-companies, .facts-container{
+    grid-template-columns: repeat(2,1fr);
+    gap: 50px;
+    justify-items: center;
   }
 }
