--- a/styles/architects.css
+++ b/styles/architects.css
@@ -124,6 +124,44 @@ main > section{
   font-weight: 500;
 }
 
+/* features section related styles */
+
+.features{
+  gap: 140px;
+}
+
+#feature-section-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+}
+.feature-card{
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+.feature-card .feature-title{
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+#experience-bardge{
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -100px;
+}
+#experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
+.featured-architect img{
+  width: 100%;
+}
+
 /* some facts related styles */
 .facts-container{
   display: grid;
@@ -177,7 +215,8 @@ main > section{
 
   .navbar,
   .nav-link,
-  .teams {
+  .teams,
+  .features {
     flex-direction: column;
   }
 
@@ -196,13 +235,17 @@ main > section{
   .our-feautres{
     margin-left: 20px;
   }
+  #experience-bardge{
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 
 }
 
 
 /* medium device */
 @media screen and (min-width:576px) and (max-width:992px) {
-  .teams{
+  .teams, features{
     flex-direction: column;
   }
   .our-feautres{
@@ -212,5 +255,10 @@ main > section{
     grid-template-columns: repeat(2,1fr);
     gap: 50px;
     justify-items: center;
+  }
+
+  #experience-bardge{
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
