--- a/styles/architects.css
+++ b/styles/architects.css
@@ -147,7 +147,7 @@ main > section{
   margin-bottom: 0px;
 }
 
-#experience-bardge{
+#experience-badge{
   padding: 45px 42px;
   font-size: 1.5rem;
   font-weight: 500;
@@ -235,7 +235,7 @@ main > section{
   .our-feautres{
     margin-left: 20px;
   }
-  #experience-bardge{
+  #experience-badge{
     margin-top: 20px;
     margin-bottom: 20px;
   }
